--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,81 @@
----
-title: Le Wagon Middleman boilerplate
----
 
-<div class="welcome text-center padded">
-  <h1>Welcome to Middleman</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
+
+    <!-- Your banner code -->
+    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
+      <div class="banner-content">
+        <h1>WELCOME HOME</h1>
+        <p>Rent unique places to stay from local hosts in 190+ countries.</p>
+        <hr>
+        <%= link_to 'How it Works', '/', class: "btn-primary btn-lg" %>
+      </div>
+    </div>
+
+    <!-- Your features code -->
+    <div class="features padded">
+    <div class="text-center">
+    <%= image_tag "globe.png" %>
+      <h2>Discover the Globe</h2>
+      <p>The earth is your new home.</p>
+    </div>
+    <div class="text-center">
+    <%= image_tag "dollar.png" %>
+      <h2>Pay online</h2>
+      <p>No cash issues anymore.</p>
+    </div>
+    <div class="text-center">
+    <%= image_tag "beer.png" %>
+      <h2>Meet people</h2>
+      <p>Discover new culture and lifestyle.</p>
+    </div>
+    <div class="text-center">
+    <%= image_tag "heart.png" %>
+      <h2>Share and love</h2>
+      <p>Join a community you will love.</p>
+    </div>
+    </div>
+
+    <div class="wrapper-grey padded">
+      <h2 class="text-center">Your next trip</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
+              <div class="card-category">Paris</div>
+              <div class="card-description">
+                <h2>Seb's home</h2>
+                <p>Charming room with patio</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
+              <div class="card-category">Paris</div>
+              <div class="card-description">
+                <h2>Seb's home</h2>
+                <p>Charming room with patio</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4"></div>
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
+              <div class="card-category">Paris</div>
+              <div class="card-description">
+                <h2>Seb's home</h2>
+                <p>Charming room with patio</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
+
+    </div>
+    <!-- Your newsletter code -->
+    <div class="text-center padded">
+      <h2>Get news from us</h2>
+      <p>Leave us your mail and get news from us</p>
+      <form action="">
+        <input type="email" placeholder"bob@gmail.com">
+        <input type="submit" class="btn btn-primary">
+      </form>
+    </div>
